mouse: Also grab button presses so as to replay them on locate pointer

Applications might want to establish keyboard grabs on button presses
so we should also ungrab the keyboard when a button press occurs after
the locate pointer key is pressed.

https://bugzilla.gnome.org/show_bug.cgi?id=125618