plugins/mouse/gsd-locate-pointer.c
@@ -350,6 +350,19 @@ filter (GdkXEvent *xevent,
 
   GdkScreen *screen = (GdkScreen *)data;
 
+  if (xev->type == ButtonPress)
+    {
+      XAllowEvents (xev->xbutton.display,
+                    ReplayPointer,
+                    xev->xbutton.time);
+      XUngrabButton (xev->xbutton.display,
+                     AnyButton,
+                     AnyModifier,
+                     xev->xbutton.window);
+      XUngrabKeyboard (xev->xbutton.display,
+                       xev->xbutton.time);
+    }
+
   if (xev->type == KeyPress || xev->type == KeyRelease)
     {
       /* get the keysym */
@@ -367,9 +380,23 @@ filter (GdkXEvent *xevent,
               XAllowEvents (xev->xkey.display,
                             SyncKeyboard,
                             xev->xkey.time);
+              XGrabButton (xev->xkey.display,
+                           AnyButton,
+                           AnyModifier,
+                           xev->xkey.window,
+                           False,
+                           ButtonPressMask,
+                           GrabModeSync,
+                           GrabModeAsync,
+                           None,
+                           None);
             }
           else
             {
+              XUngrabButton (xev->xkey.display,
+                             AnyButton,
+                             AnyModifier,
+                             xev->xkey.window);
               XAllowEvents (xev->xkey.display,
                             AsyncKeyboard,
                             xev->xkey.time);
@@ -381,7 +408,11 @@ filter (GdkXEvent *xevent,
           XAllowEvents (xev->xkey.display,
                         ReplayKeyboard,
                         xev->xkey.time);
-          XUngrabKeyboard (gdk_x11_get_default_xdisplay (),
+          XUngrabButton (xev->xkey.display,
+                         AnyButton,
+                         AnyModifier,
+                         xev->xkey.window);
+          XUngrabKeyboard (xev->xkey.display,
                            xev->xkey.time);
         }
     }
